--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -138,7 +138,7 @@
 
                 <!-- Trade Management Card -->
                 <section class="card" id="card5">
-                    <h3>Trade Management App Project</h3>
+                    <h3>Trade Mgmt App Project</h3>
                     <figure>
                         <a href="./blog.html#blog-trade"><img src="./../images/TradePic.jpg" alt=""></a>
                     </figure>
