--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -64,7 +64,7 @@
                 
                 <h2>Send Me a Message</h2>
                 
-                <form action="mailto:layladg4@gmail.com" method="post" enctype="text/plain" class="form">
+                <form action="mailto:gcas022002@coderacademy.edu.au" method="post" enctype="text/plain" class="form">
 
                     <label for="name" class="label">NAME:</label>
                     <input type="text" id="name" name="name" value="" placeholder="First + Last Name"
@@ -74,7 +74,7 @@
                     <input type="email" id="email" name="email" value="" placeholder="example@domain.com" required><br><br>
 
                     <label for="message" class="label">MESSAGE:</label>
-                    <textarea name="message" id="message" cols="30" rows="10" value="" max-length="300" placeholder="Enter message here..." required></textarea><br>
+                    <textarea name="message" id="message" cols="28" rows="10" value="" max-length="300" placeholder="Enter message here..." required></textarea><br>
 
                     <input type="submit" value="Enter" id="submit"><br>
                     <input type="reset" value="Reset Fields" id="reset">
